Empty Geonode Output Crashes When Connected to BSDF #120805

Closed
opened 2024-04-19 03:50:58 +02:00 by sentharn · 5 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: Intel(R) Arc(TM) A770 Graphics Intel 4.6.0 - Build 31.0.101.5379

Blender Version
Broken: version: 4.1.1, branch: sentharn-custom, commit date: 2024-04-18 23:09, hash: efabad571b5e
Worked: (newest version of Blender that worked as expected)

Caused by 1cca960677

Short description of error
Connecting the attribute in this blend file to any of the inputs on Principled BSDF crashes it immediately.

Exact steps for others to reproduce the error
Connect the "UVs" group in the Shading editor to any of the Principled BSDF inputs.

This crash was originally reported to me by a user running Blender 4.1.1 on Linux with an NVidia GPU, so it is not a problem specific to my system. It has been verified by me.

It will only crash in Material Dev or Render Preview with Eevee renderer.

Freestyle is disabled. I don't know why Freestyle is showing up as the crash location. It may be a red herring.

Stacktrace:

	blender.exe!Freestyle::BlenderStrokeRenderer::RenderStrokeRep(Freestyle::StrokeRep * iStrokeRep) Line 422	C++
 	blender.exe!draw_update_uniforms(DRWShadingGroup * shgroup, DRWCommandsState * state, bool * use_tfeedback) Line 717	C++
 	blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1025	C++
 	[Inline Frame] blender.exe!drw_draw_pass_ex(DRWPass * start_group, DRWShadingGroup * end_group, DRWShadingGroup *) Line 1217	C++
 	blender.exe!DRW_draw_pass(DRWPass * pass) Line 1258	C++
 	blender.exe!blender::draw::DRW_curves_update() Line 352	C++
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1756	C++
 	blender.exe!DRW_draw_view(const bContext * C) Line 1630	C++
 	[Inline Frame] blender.exe!view3d_draw_view(const bContext *) Line 1580	C++
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1617	C++
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 537	C++
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1008	C++
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1177	C++
 	blender.exe!wm_draw_update(bContext * C) Line 1580	C++
 	blender.exe!WM_main(bContext * C) Line 636	C++
 	blender.exe!main(int argc, const char * * __formal) Line 578	C++
 	[External Code]	
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: Intel(R) Arc(TM) A770 Graphics Intel 4.6.0 - Build 31.0.101.5379 **Blender Version** Broken: version: 4.1.1, branch: sentharn-custom, commit date: 2024-04-18 23:09, hash: `efabad571b5e` Worked: (newest version of Blender that worked as expected) Caused by 1cca96067781f569c6bced0c4f363d71781df092 **Short description of error** Connecting the attribute in this blend file to any of the inputs on Principled BSDF crashes it immediately. **Exact steps for others to reproduce the error** Connect the "UVs" group in the Shading editor to any of the Principled BSDF inputs. This crash was originally reported to me by a user running Blender 4.1.1 on Linux with an NVidia GPU, so it is not a problem specific to my system. It has been verified by me. It will only crash in Material Dev or Render Preview with Eevee renderer. Freestyle is disabled. I don't know why Freestyle is showing up as the crash location. It may be a red herring. Stacktrace: ``` blender.exe!Freestyle::BlenderStrokeRenderer::RenderStrokeRep(Freestyle::StrokeRep * iStrokeRep) Line 422 C++ blender.exe!draw_update_uniforms(DRWShadingGroup * shgroup, DRWCommandsState * state, bool * use_tfeedback) Line 717 C++ blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1025 C++ [Inline Frame] blender.exe!drw_draw_pass_ex(DRWPass * start_group, DRWShadingGroup * end_group, DRWShadingGroup *) Line 1217 C++ blender.exe!DRW_draw_pass(DRWPass * pass) Line 1258 C++ blender.exe!blender::draw::DRW_curves_update() Line 352 C++ blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1756 C++ blender.exe!DRW_draw_view(const bContext * C) Line 1630 C++ [Inline Frame] blender.exe!view3d_draw_view(const bContext *) Line 1580 C++ blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1617 C++ blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 537 C++ blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1008 C++ blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1177 C++ blender.exe!wm_draw_update(bContext * C) Line 1580 C++ blender.exe!WM_main(bContext * C) Line 636 C++ blender.exe!main(int argc, const char * * __formal) Line 578 C++ [External Code] ```
sentharn added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-19 03:50:59 +02:00
Member

Can confirm the crash on 4.1 and 4.2.

Apparently it doesn't crash in the freestyle code here, I'm not sure why it reported on yours as such.

Here's mine (I'm on linux)

GPU_vertbuf_bind_as_texture(blender::gpu::VertBuf * verts, int binding) (/home/yiming/Downloads/BlenderMain/blender/source/blender/gpu/intern/gpu_vertex_buffer.cc:341)
draw_update_uniforms(DRWShadingGroup * shgroup, DRWCommandsState * state, bool * use_tfeedback) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:716)
draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1023)
drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1217)
DRW_draw_pass(DRWPass * pass) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1258)
blender::draw::DRW_curves_update() (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_curves.cc:343)
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_c.cc:1749)
DRW_draw_view(const bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_c.cc:1625)
view3d_draw_view(const bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/space_view3d/view3d_draw.cc:1571)
view3d_main_region_draw(const bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/space_view3d/view3d_draw.cc:1606)
ED_region_do_draw(bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/screen/area.cc:528)
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1006)
wm_draw_window(bContext * C, wmWindow * win) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1173)
wm_draw_update(bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1576)
WM_main(bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm.cc:641)
main(int argc, const char ** argv) (/home/yiming/Downloads/BlenderMain/blender/source/creator/creator.cc:586)
Can confirm the crash on 4.1 and 4.2. Apparently it doesn't crash in the freestyle code here, I'm not sure why it reported on yours as such. Here's mine (I'm on linux) ``` GPU_vertbuf_bind_as_texture(blender::gpu::VertBuf * verts, int binding) (/home/yiming/Downloads/BlenderMain/blender/source/blender/gpu/intern/gpu_vertex_buffer.cc:341) draw_update_uniforms(DRWShadingGroup * shgroup, DRWCommandsState * state, bool * use_tfeedback) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:716) draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1023) drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1217) DRW_draw_pass(DRWPass * pass) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_exec.cc:1258) blender::draw::DRW_curves_update() (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_curves.cc:343) DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_c.cc:1749) DRW_draw_view(const bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/draw/intern/draw_manager_c.cc:1625) view3d_draw_view(const bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/space_view3d/view3d_draw.cc:1571) view3d_main_region_draw(const bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/space_view3d/view3d_draw.cc:1606) ED_region_do_draw(bContext * C, ARegion * region) (/home/yiming/Downloads/BlenderMain/blender/source/blender/editors/screen/area.cc:528) wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1006) wm_draw_window(bContext * C, wmWindow * win) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1173) wm_draw_update(bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm_draw.cc:1576) WM_main(bContext * C) (/home/yiming/Downloads/BlenderMain/blender/source/blender/windowmanager/intern/wm.cc:641) main(int argc, const char ** argv) (/home/yiming/Downloads/BlenderMain/blender/source/creator/creator.cc:586) ```
YimingWu added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-19 04:09:59 +02:00
Member

Looks like for the code to get into such state, drw_shgroup_uniform_create_ex is probably missing type DRW_UNIFORM_VERTEX_BUFFER_AS_TEXTURE and DRW_UNIFORM_VERTEX_BUFFER_AS_TEXTURE_REF?

The code around these places are somewhat old so I'm not sure where and how it changed. The problem could also be upstream where it's not identifying empty geometry correctly...

@fclem

Looks like for the code to get into such state, `drw_shgroup_uniform_create_ex` is probably missing type `DRW_UNIFORM_VERTEX_BUFFER_AS_TEXTURE` and `DRW_UNIFORM_VERTEX_BUFFER_AS_TEXTURE_REF`? The code around these places are somewhat old so I'm not sure where and how it changed. The problem could also be upstream where it's not identifying empty geometry correctly... @fclem
Member

It is a crash and a regression (no crash in 4.0.2), so definitely High priority

It is a crash **and** a regression (no crash in 4.0.2), so definitely High priority
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-04-19 10:11:42 +02:00
Member

will bisect

will bisect
Member

Caused by 1cca960677

CC @JacquesLucke ^^

Note: it does not crash if i remove the socket from the GN output beforehand :

image

Caused by 1cca96067781f569c6bced0c4f363d71781df092 CC @JacquesLucke ^^ Note: it does not crash if i remove the socket from the GN output beforehand : ![image](/attachments/8f1a5324-4f2b-490b-91e1-f6d0f6915ed7)
157 KiB
Philipp Oeser added
Module
Nodes & Physics
and removed
Module
EEVEE & Viewport
labels 2024-04-19 11:17:13 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-22 09:39:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120805
No description provided.