source/blender/draw/intern/draw_cache_impl_curves.cc
@@ -706,6 +706,7 @@ static bool ensure_attributes(const Curves &curves,
     if (!drw_attributes_overlap(&final_cache.attr_used, &attrs_needed)) {
       /* Some new attributes have been added, free all and start over. */
       for (const int i : IndexRange(GPU_MAX_ATTR)) {
+        GPU_VERTBUF_DISCARD_SAFE(final_cache.attributes_buf[i]);
         GPU_VERTBUF_DISCARD_SAFE(cache.eval_cache.proc_attributes_buf[i]);
       }
       drw_attributes_merge(&final_cache.attr_used, &attrs_needed, cache.render_mutex);
